automad/src/client/blocks/styles/layout-section.less
/*
 *                    ....
 *                  .:   '':.
 *                  ::::     ':..
 *                  ::.         ''..
 *       .:'.. ..':.:::'    . :.   '':.
 *      :.   ''     ''     '. ::::.. ..:
 *      ::::.        ..':.. .''':::::  .
 *      :::::::..    '..::::  :. ::::  :
 *      ::'':::::::.    ':::.'':.::::  :
 *      :..   ''::::::....':     ''::  :
 *      :::::.    ':::::   :     .. '' .
 *   .''::::::::... ':::.''   ..''  :.''''.
 *   :..:::'':::::  :::::...:''        :..:
 *   ::::::. '::::  ::::::::  ..::        .
 *   ::::::::.::::  ::::::::  :'':.::   .''
 *   ::: '::::::::.' '':::::  :.' '':  :
 *   :::   :::::::::..' ::::  ::...'   .
 *   :::  .::::::::::   ::::  ::::  .:'
 *    '::'  '':::::::   ::::  : ::  :
 *              '::::   ::::  :''  .:
 *               ::::   ::::    ..''
 *               :::: ..:::: .:''
 *                 ''''  '''''
 *
 *
 * AUTOMAD
 *
 * Copyright (c) 2023-2026 by Marc Anton Dahmen
 * https://marcdahmen.de
 *
 * See LICENSE.md for license information.
 */

am-layout-section {
	display: flex;
	flex-direction: column;
	height: 100%;
	box-sizing: border-box;
	color: var(--am-layout-section-color);
	background-color: transparent;
	background-size: cover;
	background-position: 50% 50%;
	border-width: 0;
	border-color: var(--am-layout-section-border-color, transparent);

	am-stretched > section > & {
		padding: 0 var(--am-container-padding);
	}

	&.am-card {
		box-sizing: border-box;
		overflow: hidden;
		box-shadow: none;
		padding: var(--am-card-padding);

		& > am-stretched {
			--margin: ~'calc(var(--am-card-padding) * -1)';
			margin-inline: var(--margin) !important;

			&:first-child {
				margin-top: var(--margin) !important;
			}

			&:last-child {
				margin-bottom: var(--margin) !important;
			}
		}
	}

	& h1,
	& h2,
	& h3,
	& h4,
	& h5,
	& h6 {
		color: inherit;
	}

	& table,
	& tr,
	& th,
	& td,
	& hr {
		border-color: var(--am-layout-section-border-color, #f0f0f0) !important;
	}

	&.am-align-stretch {
		justify-content: space-between;
	}

	&.am-align-center {
		justify-content: center;
	}

	&.am-align-start {
		justify-content: start;
	}

	&.am-align-end {
		justify-content: end;
	}
}

am-flex {
	box-sizing: border-box;
	display: flex;
	flex-wrap: wrap;
	max-width: none !important;
	height: ~'calc(var(--am-flex-gap) + 100%)';
	margin: ~'calc(var(--am-flex-gap) * -0.5)';

	& > * {
		box-sizing: border-box;
		flex-grow: 0;
		max-width: none;
		min-width: ~'min(100%, var(--am-flex-min-block-width))';
		margin: 0;
		padding: ~'calc(var(--am-flex-gap) * 0.5)';
	}

	// Make gaps work when a normal block with a default width
	// is followed by an am-flex element.
	:not(&) + & {
		margin-top: ~'calc((var(--am-flex-gap) * -0.5) + var(--am-block-margin-top))';
	}

	& .am-block {
		max-width: none;
	}

	& > am {
		&-1-4 {
			flex-basis: (1 / 4 * 100%);
		}

		&-1-3 {
			flex-basis: (1 / 3 * 100%);
		}

		&-1-2 {
			flex-basis: (1 / 2 * 100%);
		}

		&-2-3 {
			flex-basis: (2 / 3 * 100%);
		}

		&-3-4 {
			flex-basis: (3 / 4 * 100%);
		}

		&-1-1 {
			flex-basis: 100%;
		}
	}

	.am-justify-start > & {
		justify-content: flex-start;
	}

	.am-justify-center > & {
		justify-content: center;
	}

	.am-justify-end > & {
		justify-content: flex-end;
	}

	.am-justify-space-between > & {
		justify-content: space-between;
	}

	.am-justify-space-evenly > & {
		justify-content: space-evenly;
	}

	.am-justify-fill-row > & > * {
		flex-grow: 1;
	}

	.am-align-normal > & {
		align-content: normal;
		align-items: normal;
	}

	.am-align-stretch > & {
		align-content: stretch;
		align-items: stretch;

		& > * > * {
			height: 100%;
		}

		// Also stretch components
		& > * > .am-block > .am-block {
			height: 100%;
		}
	}

	.am-align-center > & {
		align-content: center;
		align-items: center;
	}

	.am-align-start > & {
		align-content: start;
		align-items: start;
	}

	.am-align-end > & {
		align-content: end;
		align-items: end;
	}
}

